tdf#161498 use COL_ALPHA_OPAQUE for finding opaque pixels

Starting with commit 81994cb2b8b32453a92bcb011830fcb884f22ff3,
pixels now contain an alpha value instead of a transparency
value.

Change-Id: I07dd39859057bbbbd153a21ee38625049039b106
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/169654
Tested-by: Jenkins
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>
Reviewed-by: Patrick Luby <guibomacdev@gmail.com>
(cherry picked from commit 1ac602f6ccd75f3b79d6c7a9d40e64677dd5741a)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/169667
Reviewed-by: Adolfo Jayme Barrientos <fitojb@ubuntu.com>